# OpenCV_Device_Control

opencv_demo1/: .main.cpp.swp  CMakeLists.txt  README.md  init_db.sql  main.cpp
